<?xml version="1.0" encoding="utf-8"?>
<!--
//
// REV3 Project
// Copyright 2016, - All Rights Reserved
//
// Team BPWALSH
//
-->
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:columnCount="3"
    android:rowCount="3"
    android:keepScreenOn="true"
    android:background="@drawable/lego_shot3"
    tools:context="edu.arizona.ece573.bpwalsh.rev3.REV3Activity">

    <ImageButton
        android:id="@+id/leftButton"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:onClick="onTurnLeftClickEvent"
        android:src="@drawable/ic_arrow_back_24dp"
        android:clickable="true"
        android:background="@drawable/image_button_selector" />

    <ImageButton
        android:id="@+id/rightButton"
        android:layout_column="2"
        android:layout_row="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:onClick="onTurnRightClickEvent"
        android:src="@drawable/ic_arrow_forward_24dp"
        android:clickable="true"
        android:background="@drawable/image_button_selector" />

    <ImageButton
        android:id="@+id/forwardButton"
        android:layout_column="1"
        android:layout_row="0"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:onClick="onForwardPowerClickEvent"
        android:src="@drawable/ic_arrow_upward_24px"
        android:clickable="true"
        android:background="@drawable/image_button_selector" />

    <ImageButton
        android:id="@+id/backwardButton"
        android:layout_column="1"
        android:layout_row="2"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:onClick="onBackwardPowerClickEvent"
        android:src="@drawable/ic_arrow_downward_24px"
        android:clickable="true"
        android:background="@drawable/image_button_selector" />
    <LinearLayout
        android:layout_column="0"
        android:layout_row="0"
        android:layout_columnWeight="0.5"
        android:layout_rowWeight="0.5"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Turn\nIndicator"
            android:textColor="#304ffe"
            android:typeface="monospace" />

        <ImageView
            android:id="@+id/turnIndicator"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/turn_indicator"
            android:clickable="true" />
    </LinearLayout>
    <LinearLayout
        android:layout_column="2"
        android:layout_row="0"
        android:layout_columnWeight="0.1"
        android:layout_rowWeight="0.1"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Speed:   +0%"
            android:id="@+id/powerCommandedText"
            android:textAlignment="viewEnd"
            android:textColor="#304ffe"
            android:typeface="monospace" />
        <TextView

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Turn Rate:   +0%"
            android:id="@+id/turnCommandedText"
            android:textAlignment="viewEnd"
            android:textColor="#304ffe"
            android:typeface="monospace" />
    </LinearLayout>
</GridLayout>
